Stop using the ament branch of landing_mapper in GitHub Actions

--- a/.github/workflows/build_pkg_multi_arch.yml
+++ b/.github/workflows/build_pkg_multi_arch.yml
@@ -72,7 +72,7 @@ jobs:
           # Add source dependencies
           git clone https://gitlab.com/libeigen/eigen.git -b 3.3.9 /tmp/colcon_ws/src/eigen
           git clone git@github.com:Auterion/image_downsampler.git /tmp/colcon_ws/src/image_downsampler
-          git clone git@github.com:Auterion/landing_mapper.git -b develop_ament /tmp/colcon_ws/src/landing_mapper
+          git clone git@github.com:Auterion/landing_mapper.git -b develop /tmp/colcon_ws/src/landing_mapper
           git clone git@github.com:Auterion/px4_msgs.git -b develop /tmp/colcon_ws/src/px4_msgs
           # Run cross-compilation
           ros_cross_compile /tmp/colcon_ws \
