--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <build_depend>Eigen3</build_depend>
 
   <depend>image_downsampler</depend>
+  <depend>voxel_map</depend>
   <depend>landing_mapper</depend>
   <depend>landing_planner</depend>
   <depend>px4_msgs</depend>
