Add MAVSDK interface to MissionManager with Mavlink_PassThrough for using the avoidance interface for position control in Safe Landing.

--- a/src/modules/mission_manager/CMakeLists.txt
+++ b/src/modules/mission_manager/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(mission-manager
     MAVSDK::mavsdk_mission_raw
     MAVSDK::mavsdk_server_utility
     MAVSDK::mavsdk_telemetry
+    MAVSDK::mavsdk_mavlink_passthrough
     MAVSDK::mavsdk
     Eigen3::Eigen
     landing_mapper
