Set default shell to bash in CI

--- a/.github/workflows/build_pkg_multi_arch.yml
+++ b/.github/workflows/build_pkg_multi_arch.yml
@@ -11,6 +11,10 @@ on:
     branches:
       - '*'
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   packaging:
     name: "ROS 2 ${{ matrix.ros2_distro }} - ${{ matrix.arch }}"
