--- a/.github/workflows/build_ubuntu.yml
+++ b/.github/workflows/build_ubuntu.yml
@@ -71,7 +71,7 @@ jobs:
       run: |
         git clone https://gitlab.com/libeigen/eigen.git -b 3.3.9 /tmp/colcon_ws/src/eigen
         git clone git@github.com:Auterion/image_downsampler.git /tmp/colcon_ws/src/image_downsampler
-        git clone git@github.com:Auterion/landing_mapper.git -b new-height-map /tmp/colcon_ws/src/landing_mapper
+        git clone git@github.com:Auterion/landing_mapper.git /tmp/colcon_ws/src/landing_mapper
         git clone git@github.com:Auterion/landing_planner.git /tmp/colcon_ws/src/landing_planner
         git clone git@github.com:Auterion/px4_msgs.git /tmp/colcon_ws/src/px4_msgs
         git clone git@github.com:Auterion/timing_tools.git /tmp/colcon_ws/src/timing_tools
