--- a/.github/workflows/build_pkg_multi_arch.yml
+++ b/.github/workflows/build_pkg_multi_arch.yml
@@ -97,6 +97,7 @@ jobs:
       - name: Create zip
         run: |
           cd /tmp/colcon_ws/install_${{ matrix.arch }}
+          rm -rf px4_msgs # should be packaged in the px4-bridge
           zip -r autopilot-manager_${{ matrix.ros2_distro }}_v${{ steps.refs.outputs.tag_version }}_${{ steps.refs.outputs.package_arch }}.zip .
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
