Use PX4 landing speeds for safe landing

--- a/src/modules/mission_manager/CMakeLists.txt
+++ b/src/modules/mission_manager/CMakeLists.txt
@@ -33,6 +33,7 @@ target_link_libraries(mission-manager
     MAVSDK::mavsdk_action
     MAVSDK::mavsdk_custom_action
     MAVSDK::mavsdk_mission_raw
+    MAVSDK::mavsdk_param
     MAVSDK::mavsdk_server_utility
     MAVSDK::mavsdk_telemetry
     MAVSDK::mavsdk_mavlink_passthrough
