--- a/.github/workflows/build_ubuntu.yml
+++ b/.github/workflows/build_ubuntu.yml
@@ -82,6 +82,14 @@ jobs:
           git clone git@github.com:Auterion/ros2bagger.git /tmp/colcon_ws/src/ros2bagger
           git clone git@github.com:ros2/rosbag2.git -b foxy-future /tmp/colcon_ws/src/rosbag2
         fi
+    - name: Setup source dependencies in develop mode
+      if: github.event_name == 'pull_request' && github.base_ref != 'main'
+      run: |
+        echo "Setting up develop-mode sources for PR to branch ${{ github.base_ref }}"
+        # Landing Mapper
+        cd /tmp/colcon_ws/src/landing_mapper
+        git checkout develop
+        cd -
     - name: Build
       working-directory: /tmp/colcon_ws
       run: |
