Configure CI for version-named branches
* Run workflows when branch names start with a version number (v1*, v2* etc.).
* Use specific versions of the landing mapper and planner

--- a/.github/workflows/build_pkg_multi_arch.yml
+++ b/.github/workflows/build_pkg_multi_arch.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'main'
       - 'release/*'
+      - 'v[0-9]+*'
     tags:
       - '*'
   pull_request:
@@ -76,8 +77,8 @@ jobs:
           # Add source dependencies
           git clone https://gitlab.com/libeigen/eigen.git -b 3.3.9 /tmp/colcon_ws/src/eigen
           git clone git@github.com:Auterion/image_downsampler.git /tmp/colcon_ws/src/image_downsampler
-          git clone git@github.com:Auterion/landing_mapper.git /tmp/colcon_ws/src/landing_mapper
-          git clone git@github.com:Auterion/landing_planner.git /tmp/colcon_ws/src/landing_planner
+          git clone git@github.com:Auterion/landing_mapper.git -b v1.0.0 /tmp/colcon_ws/src/landing_mapper
+          git clone git@github.com:Auterion/landing_planner.git -b v1.0.0 /tmp/colcon_ws/src/landing_planner
           git clone git@github.com:Auterion/px4_msgs.git /tmp/colcon_ws/src/px4_msgs
           git clone git@github.com:Auterion/timing_tools.git /tmp/colcon_ws/src/timing_tools
           if [ ${{ matrix.ros2_distro }} == 'foxy' ]
