Fix linking of landing_mapper and landing_planner

--- a/src/modules/landing_manager/CMakeLists.txt
+++ b/src/modules/landing_manager/CMakeLists.txt
@@ -50,7 +50,7 @@ target_link_libraries(landing-manager
   MAVSDK::mavsdk_server_utility
   MAVSDK::mavsdk
   Eigen3::Eigen
-  landing_mapper
+  ${landing_mapper_LIBRARIES}
   ${rclcpp_LIBRARIES}
   ${image_downsampler_LIBRARIES}
   ${std_msgs_LIBRARIES}
