--- a/.github/workflows/build_pkg_multi_arch.yml
+++ b/.github/workflows/build_pkg_multi_arch.yml
@@ -75,6 +75,11 @@ jobs:
           cd /tmp/colcon_ws/src/landing_mapper
           git checkout develop
           cd -
+      - name: DEBUG - Use amentify branch of landing_planner
+        run: |
+          cd /tmp/colcon_ws/src/landing_planner
+          git checkout amentify
+          cd -
       - name: Build
         run: |
           # Run cross-compilation
